# HaskellWorkshop

./: .gitignore  .project  README.md  hWorkshop.cabal  index.html  slidesDutch.tmp  style.css
gh-pages/: slidesDutch.html  style.css
slides/: Makefile  Opzet.md  index.html  inspiratie.md  pre.html  slides.html  slidesDutch.html  slidesDutch.md  slidesDutch.tmp  slidesEnglish.md
src/: Links.hs  Main.hs  ProcessPage.hs  Spider.hs
webspider/: webspider.cabal
webspider/app/: Download.hs  Links.hs  Main.hs  Main2.hs  ProcessPage.hs  Spider.hs
